--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="login_failed">"Login Falhou"</string>
     <string name="title_activity_task_manager">TaskManagerActivity</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_inspection">InspectionActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
 </resources>
