--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,14 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
     <string name="app_name" android:textColor="@android:color/white">InspetorOnline</string>
-    <!-- Strings related to login  InspetorOnline-->
-    <string name="prompt_email">RE/Chapa</string>
+    <!-- Strings related to login InspetorOnline-->
+    <string name="prompt_email">Login</string>
     <string name="prompt_password">Senha</string>
     <string name="action_sign_in">Acessar</string>
     <string name="action_sign_in_short">Logar</string>
-    <string name="welcome">"Bem Vindo !"</string>
+    <string name="welcome">"Bem Vindo!"</string>
     <string name="invalid_username">Login Invalido</string>
     <string name="invalid_password">Senha dever ser maior que 5 caracteres</string>
-    <string name="login_failed">"Login Falhou"</string>
+    <string name="login_failed">Login Falhou</string>
     <string name="title_activity_task_manager">Gerenciador de Tarefas</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_inspection">Inspecao</string>
@@ -53,18 +53,55 @@
         Nota para esta Inspeção
     </string>
     <string name="hint_comments">Comentarios</string>
-    <string name="text_save">SALVAR</string>
-    <string name="error_message_line">Informe a Linha</string>
-    <string name="error_message_prefix">Informe o Prefixo</string>
-    <string name="error_message_location">Informe o Local</string>
-    <string name="error_message_password">Enter Password</string>
-    <string name="success_message">Sign Up Successful</string>
 
+    <string name="text_save">SALVAR</string>
+
+    <string name="error_line">Informe a Linha</string>
+    <string name="error_prefix">Informe o Prefixo</string>
+    <string name="error_location">Informe o Local</string>
+    <string name="error_vehicle_state">
+        Informe o Estado de Limpeza e Conservacao do Veiculo
+    </string>
+    <string name="error_presentation_employees">
+        Informe como esta a Apresentacao do Colaboradores
+    </string>
+    <string name="error_vehicle_identification">
+        Informe se o Veiculo esta Devidamente Identificado
+    </string>
+    <string name="error_personal_objects_cleaning">
+        Informe o Estado de Limpeza dos Objetos de Uso Pessoal
+    </string>
+    <string name="error_vehicle_objects_conservation">
+        Informe o Estado de Conservacao dos Objetos do Ônibus
+    </string>
+    <string name="error_employee_identification">
+        Informe se o Colaborador esta Portando Cracha
+    </string>
+    <string name="error_wheelchair_seat_belt">
+        Informe se o Cinto do Motorista e Cadeirante Funcionam
+    </string>
+    <string name="error_objects_forbiden_to_role">
+        Informe se Ha Uso de Objetos Inadequados a Funcao
+    </string>
+    <string name="error_vehicle_security_accessories">
+        Informe se Ha Uso dos Acessorios de Seguranca
+    </string>
+    <string name="error_impediment_to_inspection">
+        Informe se Houve Impedimento que Dificultou a Inspecao
+    </string>
+    <string name="error_inspection_rate">
+        De uma Nota de 0 a 10 para esta Inspeção
+    </string>
+    <string name="error_comments">
+        Informe ao menos 5 caracteres para o Comentario
+    </string>
+
+    <string name="error_message_password">Informe a Senha</string>
+    <string name="success_message">Sign Up Successful</string>
     <string name="service_not_available">Service Unavailability</string>
     <string name="invalid_lat_long_used">Invalid Location</string>
     <string name="no_address_found">Address Found</string>
     <string name="address_found">Address Found</string>
     <string name="no_geocoder_available">GeoCoder Unavailability</string>
-
     <string name="no_location_data_provided">No Location Found</string>
 </resources>
