--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
-    <string name="app_name" android:textColor="@android:color/white">InspetorOnline</string>
+    <string name="app_name">InspetorOnline</string>
     <!-- Strings related to login InspetorOnline-->
     <string name="prompt_email">Email ou Telefone (5511999999999)</string>
     <string name="prompt_password">Senha</string>
