--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,16 +121,18 @@
 
     <string name="hint_permanence_note">Observacao</string>
     <string name="hint_permanence_department">Setor</string>
-    <string name="hint_permanence_initial_date">Date Inicial</string>
-    <string name="hint_permanence_final_date">Date Final</string>
+    <string name="hint_permanence_initial_date">Date Inicial (HH:MM)</string>
+    <string name="hint_permanence_final_date">Date Final (HH:MM)</string>
     <string name="error_permanence_department">Selecione um Setor</string>
     <string name="error_permanence_note">
         Informe ao menos 5 caracteres para a Observacao
     </string>
-    <string name="error_permanence_initial_date">Date Inicial Invalida</string>
-    <string name="error_permanence_final_date">Date Final Invalida</string>
-
-
+    <string name="error_permanence_initial_date">
+        Date Inicial Permitida Ate 2 Horas Passadas
+    </string>
+    <string name="error_permanence_final_date">
+        Date Final Permitida Sem Horas Futuras
+    </string>
 
     <string name="hint_guidance_line">Linha</string>
     <string name="hint_guidance_direction">Sentido</string>
